--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.shopback.mymovie"
+        applicationId "com.phearumthann.mymovie"
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 1
